Fixing inconsistent spacing for the product detail 'see more' links

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -228,7 +228,7 @@
 
 <%# See More %>
 <% if @product.category_hierarchy.present? %>
-  <section class="detail-view__divider--top-btm detail-view__divider--top island-top island-sides islet-btm" aria-labelledby="see-more">
+  <section class="detail-view__divider--top-btm detail-view__divider--top island" aria-labelledby="see-more">
     <h2 class="detail-view__hdr-sub hn" id="see-more">See More</h2>
     <nav role="navigation">
       <ul class="horiz-list horiz-list--spacing-micro horiz-list--spacing-half-wrap">
