--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :tile_attrs, 'itemprop="event" itemscope itemtype="http://schema.org/Event"'.html_safe %>
+<% content_for :tile_attrs, 'itemprop="event" itemscope itemtype="http://schema.org/Event"'.html_safe, flush: true %>
 
 <%# Tile event image %>
 <div class="tile__image">
