Load store trading hours on map click rather than page load

--- a/app/views/shared/micello_maps/_popup.html.erb
+++ b/app/views/shared/micello_maps/_popup.html.erb
@@ -15,11 +15,7 @@
     <%# Store name and closing time %>
     <div class="map-micello__overlay__retailer__body">
       <em class="map-micello__hdr txt-truncate"><%%- name %></em>
-      <%% if(!closed_today){ %>
-      <p>Open till <time datetime="<%%- closing_time_24 %>"><%%- closing_time_12 %></time></p>
-      <%% } else {  %>
-        <p>Closed today</p>
-      <%%  }  %>
+      <div class="js-trading-hours-html" style="height: 18px"></div>
     </div>
     <%# //Store name and closing time %>
 
