refactor fetch trading hours and clean up js hooks

--- a/app/views/shared/micello_maps/_popup.html.erb
+++ b/app/views/shared/micello_maps/_popup.html.erb
@@ -15,7 +15,7 @@
     <%# Store name and closing time %>
     <div class="map-micello__overlay__retailer__body">
       <em class="map-micello__hdr txt-truncate"><%%- name %></em>
-      <div class="js-trading-hours-html" style="height: 18px"></div>
+      <div class="js-trading-hours-map-overlay" style="height: 18px"></div>
     </div>
     <%# //Store name and closing time %>
 
