--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -1,4 +1,4 @@
-<div class="header__overlay header-search-toggle drop-down js-global-search" id="site-search">
+<div class="header__overlay header-search-toggle drop-down js-global-search js-global-search-clear-input" id="site-search">
   <div class="vert-align">
     <div class="vert-align__inner">
       <div class="container drop-down-container" ng-controller="GlobalSearchCtrl" ng-cloak>
@@ -23,7 +23,7 @@
           <% if national_product_index? %>
             <input type="search" class="search-mini__input" name="search_query" autocomplete="off" placeholder="Search products&#8230;">
           <% else %>
-            <input ng-model="searchQuery" ng-focus="makeSuggestions()" ng-keyup="makeSuggestions($event)" ng-keydown="navigateSuggestions($event)" type="search" class="search-mini__input js-global-search-clear-input" id="global-search" name="search_query" autocomplete="off" placeholder="Search stores &amp; products&#8230;">
+            <input ng-model="searchQuery" ng-focus="makeSuggestions()" ng-keyup="makeSuggestions($event)" ng-keydown="navigateSuggestions($event)" type="search" class="search-mini__input" id="global-search" name="search_query" autocomplete="off" placeholder="Search stores &amp; products&#8230;">
           <% end -%>
 
           <input type="submit" value="Search" ng-hide="true" class="search-mini__submit">
