Revert "Merge pull request #1007 from ewee/remove_store_hours"
This reverts commit 69e428e4e85a7d499faf0670cf015fa89dc2a692, reversing
changes made to 8a730ab2f56a24bd0829013d0066635fba8df9ef.

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -98,6 +98,19 @@
                 <%- if @store.closing_time.present? and !@store.closed_today %>
                   <dt class="hide-visually">Opening hours</dt>
                   <dd>Open<span class="hide-fully--palm-inline"> from</span> <time datetime="<%= @store.opening_time %>"><%= twelve_hour_format @store.opening_time %></time>&#8211;<time datetime="<%= @store.closing_time %>"><%= twelve_hour_format @store.closing_time %></time><span class="hide-fully--palm-inline"> today</span>
+                  <% if @this_week_hours.present? %>
+                    <button class="btn btn--faux-link js-store-hours-toggle-trigger js-disabled-hide" toggle-visibility="store-hours" toggle-visibility-drop-down="false" aria-owns="store-hours">
+                      <span class="hide-fully--palm">
+                        (Show
+                        <span class="show-when-visible">less)</span>
+                        <span class="hide-when-visible">more)</span>
+                      </span>
+                      <span class="hide-fully--non-palm">
+                        <span class="show-when-visible">(Less)</span>
+                        <span class="hide-when-visible">(More)</span>
+                      </span>
+                    </button>
+                  <% end %>
                   <span class="icon icon--hours icon--xlrg icon--fixed-width" aria-hidden="true"></span>
                   </dd>
                 <%- else %>
@@ -140,6 +153,68 @@
 
           </div>
           <%# //Store details %>
+
+          <%# Store opening hours %>
+          <% if @this_week_hours.present? %>
+            <div class="storefront__featured storefront__featured--hours toggle-visibility island-ends js-store-hours-toggle-target" id="store-hours">
+              <div class="container">
+                <div class="txt-formatted">
+                  <h2 class="mrg-half">Store Hours</h2>
+                </div>
+                <div class="islet island-non-palm box">
+                  <table cellspacing="0" class="table-striped table-fixed">
+                    <colgroup>
+                      <col class="one-tenth lap-sml-one-eighth lap-lrg-one-sixths desk-one-tenth"></col>
+                      <col class="one-quarter lap-sml-one-sixth lap-lrg-one-fifth desk-one-sixth"></col>
+                      <col class="desk-two-fifths" style="background: pinks;"></col>
+                      <col class="two-fifths lap-lrg-one-third desk-one-quarter"></col>
+                    </colgroup>
+                    <thead>
+                      <tr>
+                        <th scope="col" class="table-cell-padding-off">
+                          <span class="hide-visually">Day</span>
+                        </th>
+                        <th scope="col" class="table-cell-padding-off">
+                          <span class="hide-visually">Date</span>
+                        </th>
+                        <th scope="col" class="table-cell-padding-off">
+                          <span class="hide-visually">Public holiday</span>
+                        </th>
+                        <th scope="col" class="table-cell-padding-off">
+                          <span class="hide-visually">Hours</span>
+                        </th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <% @this_week_hours.each do |hour| %>
+                        <tr<%= " class=txt-bold" if today?(hour.date) %>>
+                          <td>
+                            <%= format_day(hour.date,0,3) %><span class="hide-fully--palm-inline"><%= format_day(hour.date,3,6) %></span>
+                          </td>
+                          <td>
+                            <%= format_date(hour.date, "#{ordinalize_day(hour.date)} %b") %>
+                          </td>
+                          <td>
+                            <% if hour.description.present? %>
+                              <em class="pill <%= "txt-truncate txt-truncate--inline-block " if hour.description.length > 18 %>" <%= "title=#{hour.description.html_safe}" if hour.description.length > 18 %>><%= hour.description %></em>
+                            <% end %>
+                          </td>
+                          <td class="txt-right">
+                            <% if hour.closed %>
+                              Closed
+                            <% else %>
+                              <time datetime="<%= hour.date %>T<%= hour.opening_time %>"><%= twelve_hour_format(hour.opening_time) %></time> &#8211; <time datetime="<%= hour.date %>T<%= hour.closing_time %>"><%= twelve_hour_format(hour.closing_time) %></time>
+                            <% end %>
+                          </td>
+                        </tr>
+                      <% end %>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          <% end %>
+          <%# //Store opening hours %>
 
           <%# Product and Deal tiles %>
           <%- if @products.present? or @deals.present? %>
