--- a/app/views/shared/tiles/_canned_search.html.erb
+++ b/app/views/shared/tiles/_canned_search.html.erb
@@ -14,9 +14,7 @@
 <div class="tile__meta">
 
   <%# Tile canned search icon %>
-  <span class="tile__meta__icon">
-    <span class="icon icon--<%= result.icon %> icon--lrg" aria-hidden="true"></span>
-  </span>
+  <span class="tile__meta__icon icon icon--<%= result.icon %> icon--lrg" aria-hidden="true"></span>
   <%# //Tile canned search icon %>
 
   <%# Tile canned search title and tag line %>
