--- a/app/views/shared/tiles/_curation.html.erb
+++ b/app/views/shared/tiles/_curation.html.erb
@@ -15,9 +15,7 @@
 <div class="tile__meta">
 
   <%# Tile curation icon %>
-  <span class="tile__meta__icon">
-    <span class="icon icon--products icon--lrg" aria-hidden="true"></span>
-  </span>
+  <span class="tile__meta__icon icon icon--products icon--lrg" aria-hidden="true"></span>
   <%# //Tile curation icon %>
 
   <%# Tile curation title and tag line %>
