--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -27,7 +27,5 @@
 <%# //Tile deal meta %>
 
 <%# Tile deal icon %>
-<span class="tile__meta__icon">
-  <span class="icon icon--deals icon--lrg" aria-hidden="true"></span>
-</span>
+<span class="tile__meta__icon icon icon--deals icon--lrg" aria-hidden="true"></span>
 <%# //Tile deal icon %>
