--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -16,9 +16,7 @@
 <div class="tile__meta">
 
   <%# Tile event icon %>
-  <span class="tile__meta__icon">
-    <span class="icon icon--events icon--lrg" aria-hidden="true"></span>
-  </span>
+  <span class="tile__meta__icon icon icon--events icon--lrg" aria-hidden="true"></span>
   <%# Tile event icon %>
 
   <%# Tile event title and date %>
