--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -12,7 +12,7 @@
     </span>
     <%# //PJAX preloader %>
 
-    <div class="stores-maps__inner stores-maps__inner--detail js-store-hours-toggle-container<%= ' is-featured-items' if @products.present? or @deals.present? %>" id="stores-maps-toggle-listing-detail">
+    <div class="stores-maps__inner stores-maps__inner--detail" id="stores-maps-toggle-listing-detail">
 
       <%# Back to listing link %>
       <div class="stores-maps__filters-toggle">
