--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,26 +1,27 @@
 <% content_for :class_for_main, "container--spacing-top-main-content " %>
 
 <% if @sorted_results_tuple.empty? %>
+  <div class="container container--narrow">
+    <div class="fallback-msg fallback-msg--spacing-top">
+      <p><em class="h1">No results found for "<%= @search_term =%>"</em></span></p>
 
-  <div class="fallback-msg fallback-msg--spacing-top">
-    <p><em class="h1">No results found for "<%= @search_term =%>"</em></span></p>
+      <p>Try a different spelling, or try a store name or category. You can also browse one of the sections below&#8230;</p>
 
-    <p>Try a different spelling, or try a store name or category. You can also browse one of the sections below&#8230;</p>
-
-    <nav role="navigation">
-      <ul class="horiz-list horiz-list--spacing-half horiz-list--spacing-half-wrap txt-formatted__list-unstyled">
-        <% @links.each do |kind| %>
-          <li>
-            <%= link_to kind.url, class: "btn btn--main btn--main-white btn--main-compact-sides btn--main-max-width btn--main-max-width-palm" do %>
-              <span class="icon icon--<%= kind.icon %> icon--spacing" aria-hidden="true"></span>
-              <%= kind.label %>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
-    </nav>
-
-
+      <nav role="navigation">
+        <ul class="grid grid--gutter-half grid--mrg-half grid--non-linear">
+          <% @links.each do |kind| %>
+            <li class="grid__item  one-half lap-sml-one-third non-palm-one-quarter">
+              <%= link_to kind.url do %>
+                <span class="icon icon--<%= kind.icon %> icon--spacing icon--sphere" aria-hidden="true"></span>
+                <div class="txt-formatted">
+                  <h2><%= kind.label %></h2>
+                </div>
+              <% end %>
+            </li>
+          <% end %>
+        </ul>
+      </nav>
+    </div>
   </div>
 <% else %>
   <h1>Results for "<%= @search_term =%>"</h1>
