--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -2,6 +2,7 @@
 <!--[if (IE 9) & (!IEMobile)]>    <html class="no-js ie-9" lang="en-au">    <![endif]-->
 <!--[if gt IE 8]><!-->            <html class="no-js" lang="en-au">         <!--<![endif]-->
 <head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!--[if !IE]><base href="/"><![endif]-->
   <!--[if lte IE 9]><base href="<%= request.path %>"><![endif]-->
 
