--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -44,53 +44,13 @@
         <% unless national_product_index? %>
           <div class="search-results drop-down js-disabled-hide" ng-show="suggestionsVisible && searchQuery !== ''">
             <div class="search-results__inner js-search-results-keyboard-scrolling">
-              <dl class="search-results__list">
-
-                <%# Stores %>
-                <dt class="search-results__list__spacing" ng-if="suggestions.stores">
-                  <span aria-hidden="true" class="icon icon--store icon--xlrg"></span> Stores
+              <dl class="search-results__list" >
+                <dt ng-repeat-start="(suggestionGroup, results) in suggestions" class="search-results__list__spacing" ng-if="results">
+                  <span aria-hidden="true" class="icon {{iconMapping(suggestionGroup)}} icon--xlrg"></span> {{unsnake(suggestionGroup)}}
                 </dt>
-                <dd class="js-search-results-item-height" ng-repeat="suggestion in suggestions.stores" role="presentation">
+                <dd class="js-search-results-item-height" ng-repeat-end ng-repeat="suggestion in results" role="presentation">
                   <a target="_self" ng-class="{'is-focused': suggestion === focusedSuggestion}" ng-href="{{url(suggestion)}}" tabindex="-1">{{suggestion.description}}</a>
                 </dd>
-                <%# //Stores %>
-
-                <%# Products %>
-                <dt ng-if="suggestions.products">
-                  <span aria-hidden="true" class="icon icon--products icon--xlrg"></span> Products
-                </dt>
-                <dd class="js-search-results-item-height" ng-repeat="suggestion in suggestions.products" role="presentation">
-                  <a target="_self" ng-class="{'is-focused': suggestion === focusedSuggestion}" ng-href="{{url(suggestion)}}" tabindex="-1">{{suggestion.description}}</a>
-                </dd>
-                <%# //Products %>
-
-                <%# Events %>
-                <dt ng-if="suggestions.events">
-                  <span aria-hidden="true" class="icon icon--events icon--xlrg"></span> Events
-                </dt>
-                <dd ng-repeat="suggestion in suggestions.events" role="presentation">
-                  <a target="_self" ng-class="{'is-focused': suggestion === focusedSuggestion}" ng-href="{{url(suggestion)}}" tabindex="-1">{{suggestion.description}}</a>
-                </dd>
-                <%# //Events %>
-
-                <%# Centre Information %>
-                <dt ng-if="suggestions.centre_information">
-                  <span aria-hidden="true" class="icon icon--info icon--xlrg"></span> Centre Information
-                </dt>
-                <dd ng-repeat="suggestion in suggestions.centre_information" role="presentation">
-                  <a target="_self" ng-class="{'is-focused': suggestion === focusedSuggestion}" ng-href="{{url(suggestion)}}" tabindex="-1">{{suggestion.description}}</a>
-                </dd>
-                <%# //Centre Information %>
-
-                <%# Deals %>
-                <dt ng-if="suggestions.deals">
-                  <span aria-hidden="true" class="icon icon--deals icon--xlrg"></span> Deals
-                </dt>
-                <dd ng-repeat="suggestion in suggestions.deals" role="presentation">
-                  <a target="_self" ng-class="{'is-focused': suggestion === focusedSuggestion}" ng-href="{{url(suggestion)}}" tabindex="-1">{{suggestion.description}}</a>
-                </dd>
-                <%# //Deals %>
-
               </dl>
             </div>
           </div>
