singularize icon names

--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -33,7 +33,7 @@
 .icon--store:before {content: "\e002";}
 
 /* Products */
-.icon--products:before {content: "\e000";}
+.icon--product:before {content: "\e000";}
 
 /* Product collection */
 .icon--product-collection:before {content: "\e03f";}
@@ -42,13 +42,13 @@
 .icon--product-curation:before {content: "\e03e";}
 
 /* Deals */
-.icon--deals:before {content: "\e001";}
+.icon--deal:before {content: "\e001";}
 
 /* Events */
-.icon--events:before {content: "\e003";}
+.icon--event:before {content: "\e003";}
 
 /* Favourites */
-.icon--favs:before {content: "\e030";}
+.icon--fav:before {content: "\e030";}
 
 /* Search */
 .icon--search:before {content: "\e014";}
