--- a/app/views/shared/tiles/_deal.html.erb
+++ b/app/views/shared/tiles/_deal.html.erb
@@ -27,5 +27,6 @@
 <%# //Meta %>
 
 <%# Icon %>
-<span class="tile__meta__icon icon icon--deals icon--lrg" aria-hidden="true"></span>
+<span class="tile__meta__icon icon icon--deal icon--lrg" aria-hidden="true"></span>
 <%# //Icon %>
+
