--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -24,7 +24,7 @@
   <%# //Date %>
 
   <%# Icon %>
-  <span class="tile__meta__icon icon icon--events icon--lrg" aria-hidden="true"></span>
+  <span class="tile__meta__icon icon icon--event icon--lrg" aria-hidden="true"></span>
   <%# Icon %>
 
 </div>
