--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -33,7 +33,7 @@
   <%# //Product price %>
 
   <%# Icon %>
-  <span class="tile__meta__icon icon icon--products icon--lrg" aria-hidden="true"></span>
+  <span class="tile__meta__icon icon icon--product icon--lrg" aria-hidden="true"></span>
   <%# //Icon %>
 
 </div>
