--- a/app/views/styleguide/modules/_tile.html.erb
+++ b/app/views/styleguide/modules/_tile.html.erb
@@ -7,7 +7,7 @@
     </div>
 
     <div class="tile__meta">
-      <span class="tile__meta__icon icon icon--products" aria-hidden="true"></span>
+      <span class="tile__meta__icon icon icon--product" aria-hidden="true"></span>
       <div class="tile__meta__inner">
         <h3 class="tile__meta__hdr txt-truncate">Goodridden</h3>
         <p class="tile__meta__desc txt-truncate">
@@ -46,7 +46,7 @@
     </div>
 
     <span class="tile__meta__icon">
-      <span class="icon icon--deals" aria-hidden="true"></span>
+      <span class="icon icon--deal" aria-hidden="true"></span>
     </span>
   </a>
 
