--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -14,7 +14,7 @@
   <%# No deals fallback message %>
   <div class="fallback-msg fallback-msg--spacing-top">
     <p>
-      <span class="fallback-msg__icon icon icon--deals icon--flush-top" aria-hidden="true"></span>
+      <span class="fallback-msg__icon icon icon--deal icon--flush-top" aria-hidden="true"></span>
       <em class="h1">No deals at this centre</em>
       <span>See nearby centres</span>
     </p>
