--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,7 +7,7 @@
   <%# No events fallback message %>
   <div class="fallback-msg fallback-msg--spacing-top">
     <p>
-      <span class="fallback-msg__icon icon icon--events icon--flush-top" aria-hidden="true"></span>
+      <span class="fallback-msg__icon icon icon--event icon--flush-top" aria-hidden="true"></span>
       <em class="h1">No events at this centre</em>
       <span>See nearby centres</span>
     </p>
